@@ -113,23 +113,23 @@ def _admin_views(config):
     config.add_route_7('admin:certificate:focus', '/certificate/{@id}')
     config.add_route_7('admin:certificate:focus|json', '/certificate/{@id}.json')
     config.add_route_7('admin:certificate:focus:config_json', '/certificate/{@id}/config.json')
-    config.add_route_7('admin:certificate:focus:parse.json', '/certificate/{@id}/parse.json')
+    config.add_route_7('admin:certificate:focus:parse|json', '/certificate/{@id}/parse.json')
     config.add_route_7('admin:certificate:focus:chain:raw', '/certificate/{@id}/chain.{format:(cer|crt|der|pem|pem.txt)}')
     config.add_route_7('admin:certificate:focus:fullchain:raw', '/certificate/{@id}/fullchain.{format:(pem|pem.txt)}')
     config.add_route_7('admin:certificate:focus:privatekey:raw', '/certificate/{@id}/privkey.{format:(key|pem|pem.txt)}')
     config.add_route_7('admin:certificate:focus:cert:raw', '/certificate/{@id}/cert.{format:(crt|pem|pem.txt)}')
     config.add_route_7('admin:certificate:focus:nginx_cache_expire', '/certificate/{id:\d}/nginx-cache-expire')
-    config.add_route_7('admin:certificate:focus:nginx_cache_expire.json', '/certificate/{id:\d}/nginx-cache-expire.json')
+    config.add_route_7('admin:certificate:focus:nginx_cache_expire|json', '/certificate/{id:\d}/nginx-cache-expire.json')
     config.add_route_7('admin:certificate:focus:renew:queue', '/certificate/{@id}/renew/queue')
-    config.add_route_7('admin:certificate:focus:renew:queue.json', '/certificate/{@id}/renew/queue.json')
+    config.add_route_7('admin:certificate:focus:renew:queue|json', '/certificate/{@id}/renew/queue.json')
     config.add_route_7('admin:certificate:focus:renew:quick', '/certificate/{@id}/renew/quick')
-    config.add_route_7('admin:certificate:focus:renew:quick.json', '/certificate/{@id}/renew/quick.json')
+    config.add_route_7('admin:certificate:focus:renew:quick|json', '/certificate/{@id}/renew/quick.json')
     config.add_route_7('admin:certificate:focus:renew:custom', '/certificate/{@id}/renew/custom')
-    config.add_route_7('admin:certificate:focus:renew:custom.json', '/certificate/{@id}/renew/custom.json')
+    config.add_route_7('admin:certificate:focus:renew:custom|json', '/certificate/{@id}/renew/custom.json')
     config.add_route_7('admin:certificate:upload', '/certificate/upload')
-    config.add_route_7('admin:certificate:upload.json', '/certificate/upload.json')
+    config.add_route_7('admin:certificate:upload|json', '/certificate/upload.json')
     config.add_route_7('admin:certificate:focus:mark', '/certificate/{@id}/mark')
-    config.add_route_7('admin:certificate:focus:mark.json', '/certificate/{@id}/mark.json')
+    config.add_route_7('admin:certificate:focus:mark|json', '/certificate/{@id}/mark.json')
 
     # Certificate Requests
     config.add_route_7('admin:certificate_requests', '/certificate-requests')
